<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backdrop"
    tools:context=".MoreScreen">

    <Button
        android:id="@+id/sqrtButton"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="308dp"
        android:backgroundTint="@color/button_red"
        android:onClick="findSqrt"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/sqrt"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/button_ripple" />

    <Button
        android:id="@+id/powerButton"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:layout_marginBottom="308dp"
        android:backgroundTint="@color/button_red"
        android:onClick="findPow"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:text="@string/power"
        android:textColor="#F8F9FA"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sqrtButton"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/button_ripple" />

    <EditText
        android:id="@+id/enterNum2"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/number_2"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/button_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/enterNum1"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/number_1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/button_red"
        app:layout_constraintEnd_toStartOf="@+id/enterNum2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="231dp"
        android:layout_height="77dp"
        android:layout_marginTop="160dp"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/answer"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>