<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backdropBlue"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enterNum1"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="Number 1"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/enterNum2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:layout_marginBottom="292dp"
        android:backgroundTint="@color/buttonRed"
        android:onClick="findSum"
        android:text="@string/plus"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/buttonRed"
        android:onClick="findDif"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/divButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/divButton"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="172dp"
        android:backgroundTint="@color/buttonRed"
        android:onClick="findDiv"
        android:text="@string/divide"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/multButton"
        android:layout_width="86dp"
        android:layout_height="83dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/buttonRed"
        android:onClick="findProd"
        android:text="@string/mult"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divButton"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusButton"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/enterNum2"
        android:layout_width="162dp"
        android:layout_height="48dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Number 2"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/app_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="164dp"
        android:layout_height="41dp"
        android:layout_marginTop="224dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>